<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="#ffffffff">

    <ImageView
        android:id="@+id/a"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="#1B1B1B"
        android:gravity="center"
        android:scaleType="fitCenter"
        android:padding="20dp"
        android:src="@drawable/ic_icon_delete" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/deleting"
        android:id="@+id/text_dialog"
        android:layout_below="@+id/a"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="20dp"
        android:textSize="18sp"
        android:textColor="#ff000000"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <Button
        android:id="@+id/btn_yes"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/text_dialog"
        android:layout_marginBottom="20dp"
        android:layout_alignStart="@id/a"
        android:layout_marginStart="20dp"
        android:background="@drawable/btn_flat_green_selector"
        android:text="@string/yes"
        android:textColor="#ffffffff" />

    <Button
        android:id="@+id/btn_no"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_below="@+id/text_dialog"
        android:layout_marginBottom="20dp"
        android:layout_alignEnd="@id/a"
        android:layout_marginEnd="20dp"
        android:background="@drawable/btn_flat_green_selector"

        android:text="@string/no"
        android:textColor="#ffffffff" />

</RelativeLayout>