<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="MainActivity">

    <LinearLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/currentValueLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/current_magnetic"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="45.00"
            android:textColor="#FFFFFF"
            android:textSize="23sp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            >

            <ImageButton
                android:id="@+id/vibratorButton"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="15dp"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"
                android:src="@drawable/ic_vibration_is_off" />

            <TextView
                android:id="@+id/timer_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/digit"
                android:gravity="center"
                android:layout_centerInParent="true"
                android:text="00:30"
                android:textColor="#76FF03"
                android:textSize="65sp"
                android:textStyle="bold"
                android:visibility="visible" />
        </RelativeLayout>

        <TextView
            android:id="@+id/mediumValueLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/medium_value"
            android:textColor="#FFFFFF"
            android:textSize="24sp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <TextView
            android:id="@+id/medium_value"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/null_value"
            android:textColor="#FFFFFF"
            android:textSize="23sp"
            android:textStyle="bold"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginBottom="40dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_weight="1"
            >

            <ImageButton
                android:id="@+id/addPlaceButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"

                android:background="@android:color/transparent"
                android:src="@drawable/ic_icon_add" />

            <ImageButton
                android:id="@+id/button_start_measurement"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:background="@android:color/transparent"
                android:scaleType="fitCenter"

                android:src="@drawable/ic_switchon" />

            <ImageButton
                android:id="@+id/archiveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_archive_icon_01" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>